fix dialog overflowing on mobile

--- a/src/components/dialog/dialog.module.css
+++ b/src/components/dialog/dialog.module.css
@@ -12,11 +12,19 @@
   padding: var(--space-lg);
 }
 
-.backdrop > * {
+.focusLock {
   width: 100%;
+  height: 100%;
+}
+
+.autoFocus {
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
 }
 
 .dialog {
   max-width: max-content;
-  margin: 0 auto;
+  margin: auto;
+  overflow-y: auto;
 }
